# pandorast

./: .dockerignore  .gitignore  Cargo.toml  IoTwins_config.toml  README.MD  compatibility.py  dockerfile  iotwins.rs  notes.MD
.devcontainer/: Dockerfile  devcontainer.json
docker/: development.dockerfile  dockerfile
docs/TFG/: __latexindent_temp.tex  pandorast.tex  sources.bib
src/: config.rs  engine.rs  iotwins.rs  iotwins_model.rs  iotwins_world.rs  main.rs  model.rs  world.rs
src/config/: agent.rs
src/iotwins_model/: agent.rs  arrivals.rs  routes.rs  snapshot.rs  stadium.rs  structures.rs  world.rs
