[package]
name = "pandorast"
version = "0.1.0"
authors = ["M Esteban Fernández"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.5.8"
serde = { version = "1.0.133", features = ["derive"] }
rayon = "1.5.1"
mimalloc = { version = "0.1.27", default-features = false }
raster = "0.2.0"
csv = "1.1"
rand = "0.8.4"