[package]
name = "pandorast"
version = "0.1.0"
authors = ["M Esteban Fernández"]
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.5.8"
serde = { version = "1.0.133", features = ["derive"] }
rayon = "1.5.1"
mimalloc = { version = "0.1.27", default-features = false }
image = "0.24.1"
csv = "1.1"
rand = "0.8.4"
dashmap = { version = "5.1.0", features = ["rayon", "send_guard"] }
indicatif = { version = "0.16.2", features = ["rayon", "improved_unicode"] }
bincode = "1.3.3"
serde_json = "1.0.79"
serde_derive = "1.0.136"
