[package]
name = "pandorast"
version = "0.1.0"
authors = ["M Esteban Fernández"]
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "*"
serde = { version = "*", features = ["derive"] }
rayon = "1.5.2"
mimalloc = { version = "*", default-features = false }
image = "*"
csv = "*"
rand = "*"
dashmap = { version = "*", features = ["rayon", "serde"] }
indicatif = { version = "*", features = ["rayon", "improved_unicode"] }
bincode = "*"
serde_json = "*"
lsd = "0.22.0"
